# MultiContour-Fire-Analysis

./: CMakeLists.txt  FireLineProgression.h  MultiContour.cpp  MultiContour.hpp  ReadMe.md  contourregion.cpp  contourregion.h  fireline.cpp  fireline.h  imageanalysis.cpp  imageanalysis.h  mca_config.cpp  mca_config.h  normal.cpp  normal.h  radiometer.cpp  radiometer.h  thermalArea.cpp  thermalArea.h
Background-Docs/: AlternativeFirelineIntensity&ReactionIntensity.pptx  Flame-Front-Report.docx
Config/: BatchCreator  BatchHeader  Config-4_19_2017Cam6.MCA
Imagery/Florida_TTRS_Data_Processed/4_19_2017Cam6/: image_thermal_22-33-35_000003915.avi
Utilities/: BatchScale  ClipAlign.cpp  Makefile  rgbClipAlign.cpp  thermalClipAlign.cpp  thermalImageScale  thermalImageScale.cpp
Utilities/MergeImagery/: Makefile  MergeImagery  MergeImagery.cpp  MergeImagery.hpp  contourregion.cpp  contourregion.h  fireline.cpp  fireline.h  imageanalysis.cpp  imageanalysis.h  mca_config.cpp  mca_config.h  normal.cpp  normal.h
